--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,8 +9,30 @@
         @apply relative z-1 bg-whiten font-satoshi text-base font-normal text-body;
     }
 
-    .no-scroll::-webkit-scrollbar {
-        display: none;
+    body {
+        --sb-track-color: #232e33;
+        --sb-thumb-color: #c8acd6;
+        --sb-size: 6px;
+    }
+        
+    body::-webkit-scrollbar {
+        width: var(--sb-size);
+    }
+
+    body::-webkit-scrollbar-track {
+        background: var(--sb-track-color);
+        border-radius: 3px;
+    }
+
+    body::-webkit-scrollbar-thumb {
+        background: var(--sb-thumb-color);
+        border-radius: 3px;
+    }
+
+    @supports not selector(::-webkit-scrollbar) {
+        body {
+            scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+        }
     }
 }
 
