--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,18 @@
             scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
         }
     }
+
+    /* Chrome, Safari, Edge, Opera */
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    /* Firefox */
+    input[type="number"] {
+        -moz-appearance: textfield;
+    }
 }
 
 @layer components {
